Fix side nav layout issues

--- a/style.css
+++ b/style.css
@@ -92,18 +92,10 @@ body, html {
 	width: 75px; height: 75px;
 }
 /* side nav */
-.nav-header {
-	display: flex;
-	align-items: center;
-	height: 60px;
-	gap: 15px;
-}
-.header-icon {
-	height: 60px;
-	width: 60px;
-}
+
 .nav {
 	display: grid;
+	grid-template-rows: 100px 350px 300px;
 	grid-row: 1 / 3;
 	padding: 15px;
 }
@@ -113,6 +105,16 @@ body, html {
 	height: 40px;
 	gap: 15px;
 	margin-bottom: 10px;
+}
+.nav-header {
+	display: flex;
+	align-items: center;
+	height: 60px;
+	gap: 15px;
+}
+.header-icon {
+	height: 60px;
+	width: 60gitpx;
 }
 .nav-icon {
 	width: 30px;
